# Automate-Claim-Insurance

./: app.py  pyproject.toml  t.ipynb
data/processed/: company_X.json
src/: claim_validator.py
